--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -323,6 +323,17 @@ footer form input[type=submit] {
 #exempleArticle h2 {
   margin-bottom: 30px;
 }
+#exempleArticle ul li {
+  list-style: square;
+  margin-left: 30px;
+  font-family: "Roboto", sans-serif;
+}
+#exempleArticle ul li:first-child {
+  margin-top: 10px;
+}
+#exempleArticle ul li:last-child {
+  margin-bottom: 25px;
+}
 #exempleArticle #buton {
   width: 80%;
   margin: 0 auto;
